--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,18 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">43</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">Test_F</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">50</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Test_S</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">19</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">5</th><th class="num">0</th><th class="num">0</th><th class="num">69</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.zs.day11.NewTest</td><td><a href="#m0">fun1</a></td><td rowspan="1">1566554861809</td><td rowspan="1">14</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test_F &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.zs.day11.pack4.Failure_Test</td><td><a href="#m0">fun2</a></td><td rowspan="1">1566573216323</td><td rowspan="1">8</td></tr><tr class="passedeven"><td><a href="#m1">fun3</a></td><td rowspan="1">1566573216338</td><td rowspan="1">5</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Test_S &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.zs.day11.pack4.Success_Test</td><td><a href="#m2">fun1</a></td><td rowspan="1">1566573216396</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m3">fun4</a></td><td rowspan="1">1566573216404</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m4">fun5</a></td><td rowspan="1">1566573216407</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.zs.day11.NewTest#fun1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test_F</h2><h3 id="m0">com.zs.day11.pack4.Failure_Test#fun2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.zs.day11.pack4.Failure_Test#fun3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test_S</h2><h3 id="m2">com.zs.day11.pack4.Success_Test#fun1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.zs.day11.pack4.Success_Test#fun4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.zs.day11.pack4.Success_Test#fun5</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
