--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="85796e">  <td>19/08/23 18:07:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.fun1()[pri:0, instance:com.zs.day11.NewTest@2a2d45ba]">fun1</td> 
-  <td>main@348100441</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>19/08/23 21:43:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.fun1()[pri:0, instance:com.zs.day11.NewTest@1b604f19]">fun1</td> 
+  <td>main@1508646930</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>19/08/23 21:43:31</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.fun2()[pri:0, instance:com.zs.day11.NewTest@1b604f19]">fun2</td> 
+  <td>main@1508646930</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>19/08/23 21:43:31</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.fun3()[pri:0, instance:com.zs.day11.NewTest@1b604f19]">fun3</td> 
+  <td>main@1508646930</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>19/08/23 21:43:31</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.fun4()[pri:0, instance:com.zs.day11.NewTest@1b604f19]">fun4</td> 
+  <td>main@1508646930</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>19/08/23 21:43:31</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.fun5()[pri:0, instance:com.zs.day11.NewTest@1b604f19]">fun5</td> 
+  <td>main@1508646930</td>   <td></td> </tr>
 </table>
